--- a/index.html
+++ b/index.html
@@ -1078,6 +1078,9 @@ body, html {
   .google-rating {
     right: 20px;
   }
+  .pricing-header{
+    border-radius: 15px;
+  }
 }
 
 
@@ -1181,6 +1184,9 @@ body, html {
     width: 90%;
     max-width: 350px;
   }
+  .pricing-header{
+    border-radius: 15px;
+  }
 
     .hero-content h1 {
     font-size: 2.2rem;
@@ -1267,6 +1273,9 @@ body, html {
   .pricing-card .btn {
     width: 80%;
     margin: 1rem auto;
+  }
+  .pricing-header{
+    border-radius: 15px;
   }
 
   .content-section {
@@ -1449,6 +1458,9 @@ body, html {
   .pricing-card .btn {
     width: 90%;
     font-size: 0.9rem;
+  }
+  .pricing-header{
+    border-radius: 15px;
   }
 
   .header-content {
